data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4308.wast
;; 7. **Conditional Branch with `br_if` on `call_indirect`**:    Implement a `call_indirect` in a conditional branch (`br_if`) scenario where the condition's value must correctly determine whether the branch is taken. A failure to evaluate the condition correctly leads to incorrect branching behavior.      **Constraint**: Test conditional evaluation correctness within `call_indirect` contexts.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $cond-func (param i32) (result i32)
      (local.get 0)
    )
    (table funcref (elem $cond-func))
    (func $br_if-test
      (local i32)
      (i32.const 0)
      (call_indirect (type 0) (i32.const 0))
      (br_if 0 (call_indirect (type 0) (i32.const 1)))
    )
  )
  "type mismatch"
)